# jwebview

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: dependency-submission.yml  natives-linux-amd64.yml  natives-macos-amd64.yml  natives-macos-arm64.yml  natives-windows-amd64.yml  test.yml
api/: build.gradle.kts
bridge/: build.gradle.kts
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/: Architecture.kt  OperatingSystem.kt  ProjectExtensions.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
internals/: build.gradle.kts
natives/: build.gradle.kts
natives/all/: build.gradle.kts
natives/linux/: build.gradle.kts
natives/linux/amd64/: build.gradle.kts
natives/macos/: build.gradle.kts
natives/macos/amd64/: build.gradle.kts
natives/macos/arm64/: build.gradle.kts
natives/source/: CMakeLists.txt
natives/source/include/: io_github_wasabithumb_jwebview_JWebViewImpl.h  io_github_wasabithumb_jwebview_JWebViewProviderImpl.h  io_github_wasabithumb_jwebview_WebViewImpl.h  io_github_wasabithumb_jwebview_except_WebViewExceptionImpl.h
natives/source/src/: main.c
natives/source/src/lib/: bind.c  bind.h  bridge.c  bridge.h  dispatch.c  dispatch.h
natives/windows/: build.gradle.kts
natives/windows/amd64/: build.gradle.kts
src/main/java/io/github/wasabithumb/jwebview/: JWebViewImpl.java  JWebViewProviderImpl.java  WebViewHandleImpl.java  WebViewImpl.java
src/test/java/io/github/wasabithumb/jwebview/: JWebViewTest.java
src/test/resources/www/: index.html  main.css  main.js
(+27 files in other folders)
